--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Personal portfolio</title>
+        <title>Felix Murimi JuniorSoftware engineer</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -53,13 +53,13 @@
                 <h2 class="title">About Me</h2>
                 <div class="about-content" >
                    <div class="column left" data-tilt>
-                       <img src="felix.jpg" alt="Felix">
+                       <img src="Images/felix.jpg" alt="Felix">
                        
                    </div> 
                    <div class="column right">
                        <div class="text">I am Felix & i'm also an <span>Aviation enthuthiast</span></div>
                        <p>
-                       I am a passionate sofware engineer specialised in android and web development. I develop android apps using Java and Kotlin. I also develop web applications and I'm profient in both frontend and backenend develeopment using a wide range of languanges: html5,css3,javascript and python django framework. I am dedicated, proficient and a team player and I ensure development of applications that are effiecient,cost-effective and that solve real world problems.</p>
+                       I am a passionate sofware engineer specialised in android and web development. I develop android apps using Java and Kotlin. I also develop web applications and I'm profient in both frontend and backenend develepment using a wide range of languanges: html5,css3,javascript and python django framework. I am dedicated, proficient and a team player and I ensure development of applications that are effiecient,cost-effective and that solve real world problems.</p>
                        <a href="#">Download CV</a>
                    </div>
                 </div>
@@ -73,26 +73,45 @@
                 <div class="services-content">
                   <div class="card">
                       <div class="box">
-                          <img src="paint.png" alt="">
-                          <div class="text">Web Design</div>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim accusamus, qui amet dolor laboriosam veniam!</p>
+                          <img src="Images/paint.png" alt="">
+                          <div class="text">Web Design & Development</div>
+                          <p>I am a proficient web developer. I major in various programming languages in web development :
+                            <div class="image">
+                                    <img src="Images/html.png" alt="">
+                                    <p>HTML5</p>
+                                    <img src="Images/css.png" alt="">
+                                    <p>CSS3</p>
+                                    <img src="Images/js.png" alt="">
+                                    <p>JAVASCRIPT</p>
+                                    <img src="Images/python.png" alt="">
+                                    <p>PYTHON</p>
+                                
+                            </div>
+                          </p>
                       </div>
                   </div>
 
                     <div class="card">
                      <div class="box">
-                         <img src="android.png" alt="">
+                         <img src="Images/android.png" alt="">
                             <div class="text">Android Development</div>
-                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim accusamus, qui amet dolor laboriosam veniam!</p>
+                         <p>I am android developer and I build modern,interactive android apps using:
+                            <div class="image">
+                                <img src="Images/html.png" alt="">
+                                <p>JAVA</p>
+                                <img src="Images/css.png" alt="">
+                                <p>KOTLIN</p>
+                        </div>
+                         </p>
                      </div>
                     </div>
-                    <div class="card">
+                    <!--<div class="card">
                          <div class="box">
-                            <img src="code4.png"  alt="">
+                            <img src="Images/code.png"  alt="">
                             <div class="text">Apps Development</div>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim accusamus, qui amet dolor laboriosam veniam!</p>
                         </div>
-                    </div>
+                    </div>-->
                     </div>
                 </div>
             <!--</div>-->
@@ -177,25 +196,25 @@
                         Get in touch with me via my email address or social media accounts as provided in my portfolio. Lets get In touch and change the world.</p>
                         <div class="icons">
                             <div class="row">
-                                <img src="user2.png" alt="">
+                                <img src="Images/user.png" alt="">
                                 <div class="info">
                                     <div class="head">Name</div>
                                     <div class="sub-title">Felix Murimi</div>
                                 </div>
                             </div>
                             <div class="row">
-                                <img src="address.png" alt="">
+                                <img src="Images/address.png" alt="">
                                 <div class="info">
                                     <div class="head">Address</div>
                                     <div class="sub-title">Kenya</div>
                                 </div>
                             </div>
                             <div class="row">
-                                <img src="email.png" alt="">
+                                <img src="Images/email.png" alt="">
                                 <div class="info">
                                     <div class="head">Email</div>
                                 	<div class="email">
-                                    <div class="sub-title">felixmurimi280@gmail.com</div>
+                                    <div class="sub-title"><a href="felixmurimi280@gmail.com">felixmurimi280@gmail.com</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -232,11 +251,11 @@
         	<div class="footer-content">
         		<span> <a href="#">Felix</a>  | <span>&copy;</span>  2020 All rights reserved</span>
         		<div class="images">
-                    <a href="#"><img src="facebook.png" class="image1" alt=""></a>
-                    <a href="#"><img src="Instagram.png" class="image1" alt=""></a>
-                    <a href="#"><img src="twitter.png" class="image1" alt=""></a>
-                    <a href="#"><img src="github.png" class="image1" alt=""></a>
-                    <a href="#"><img src="linkedin.png" class="image1" alt=""></a>
+                    <a href="https://www.facebook.com/felixmurimi.flex"><img src="Images/facebook.png" class="image1" alt=""></a>
+                    <a href="https://www.instagram.com/flexmurimi/"><img src="Images/Instagram.png" class="image1" alt=""></a>
+                    <a href="https://twitter.com/flexmurimi"><img src="Images/twitter.png" class="image1" alt=""></a>
+                    <a href="https://github.com/Felix280murimi"><img src="Images/github.png" class="image1" alt=""></a>
+                    <a href="https://www.linkedin.com/in/felix-murimi-40a05b1a6/"><img src="Images/linkedin.png" class="image1" alt=""></a>
 
         		</div>
         	</div>
