--- a/templates/style.css
+++ b/templates/style.css
@@ -94,7 +94,7 @@ border-bottom: 3px solid #111;
 /*HOME SECTION*/
 .home{
     display: flex;
-    background: url(2.jpg) no-repeat center;
+    background: url(Images/background.jpg) no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -245,12 +245,25 @@ section .title::after{
     /*content: "What i provide";*/
 }
 .services .services-content .card{
-    width: calc(33% - 20px);
+    width: calc(50% - 20px);
     background: cadetblue;/*#222;*/
     text-align: center;
     border-radius: 6px;
     padding: 20px 25px;
     cursor: pointer;
+}
+.services .services-content .card .image{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 35px;
+}
+.services .services-content .card .image img{
+    height: 20px;
+    margin-left: 5px;
+}
+.services .services-content .card .image p{
+    margin-left: 5px;
 }
 .services .services-content .card:hover{
     background: cyan;
@@ -564,6 +577,11 @@ footer span a:hover{
     }
     .services .services-content .card{
         width:100%;
+    }
+    .services .services-content .card .image{
+        display: block;
+        align-items: center;
+        justify-content: center;
     }
 }
 @media (max-width: 500px){
